# sfml-snake

./: .gitignore  CMakeLists.txt  sfml_snake
include/: AppleManager.hpp  AssetManager.hpp  BaseText.hpp  Entity.hpp  Game.hpp  GameOverText.hpp  ScoreText.hpp  Snake.hpp  SnakePart.hpp
src/: AppleManager.cpp  AssetManager.cpp  BaseText.cpp  Entity.hpp  Game.cpp  GameOverText.cpp  Highscores.cpp  Highscores.hpp  ScoreText.cpp  Snake.cpp  SnakePart.cpp  main.cpp
